--- a/templates/admin/layout/index.html
+++ b/templates/admin/layout/index.html
@@ -72,6 +72,12 @@
                             <span class="hide-menu">Apps</span>
                         </li>
                         <li class="sidebar-item">
+                            <a class="sidebar-link" href="/admin/roles">
+                                <iconify-icon icon="solar:screencast-2-line-duotone" class=""></iconify-icon>
+                                <span class="hide-menu">Roles</span>
+                            </a>
+                        </li>
+                        <li class="sidebar-item">
                             <a class="sidebar-link" href="/admin/categories">
                                 <iconify-icon icon="solar:chart-line-duotone" class=""></iconify-icon>
                                 <span class="hide-menu">Danh mục</span>
