--- a/templates/user/layout/auth.html
+++ b/templates/user/layout/auth.html
@@ -15,6 +15,7 @@
     <meta property=og:image:type content=image/jpeg>
     <meta property=og:image:width content=200>
     <meta property=og:image:height content=200>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel=stylesheet href="/static/user/css/RegisterAccount.Head.styles.css">
 <script src="/static/user/js/RegisterAccount.Head.scripts.js"></script>
 <script src="/static/user/js/RegisterAccount.Footer.scripts.js"></script>
