--- a/templates/user/auth/register.html
+++ b/templates/user/auth/register.html
@@ -248,7 +248,7 @@ document.addEventListener("DOMContentLoaded", function () {
             let data = await response.json();
             
             if (response.ok) {
-                localStorage.setItem("user_id", data.user_id);
+                localStorage.setItem("token", data.token);
                 Swal.fire("Thành công", "Đăng ký thành công!", "success").then(() => {
                     window.location.href = "/verifyotpvuphone";
                 });
